--- a/calibration_testing/test.ipynb
+++ b/calibration_testing/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fd29de68",
    "metadata": {},
    "outputs": [
@@ -68,12 +68,14 @@
     "\n",
     "linear_data = raw_data[1:, 1:4]\n",
     "linear_data_mean = linear_data.mean(axis=0)\n",
-    "offset = linear_data_mean - np.round(linear_data_mean)\n",
+    "offset = linear_data_mean - np.round(linear_data_mean) # pronac gdje je 1 NIJE IDEALNO, ALI RADI ZA NAŠ SLUČAJ # TYPE??\n",
     "linear_calibrated = linear_data - offset\n",
     "\n",
     "gyro_data = raw_data[1:, 4:7]\n",
-    "gyro_data_mean = gyro_data.mean(axis=0)\n",
+    "gyro_data_mean = gyro_data.mean(axis=0) # TYPE???\n",
     "gyro_calibrated = gyro_data - gyro_data_mean\n",
+    "\n",
+    "magnet_data = raw_data[1:, 7:]\n",
     "\n",
     "calibrated_lin_gyro = np.concatenate((linear_calibrated, gyro_calibrated), axis=1)\n",
     "\n",
